# python_utils

./: .gitignore  README.md  __init__.py  _version.py  conftest.py  find_missing_tests.py  mypy.ini  pyproject.toml  pytest.sh  requirements.txt  requirements_dev.txt
.github/: copilot-instructions.md
asyncio_functions/: __init__.py  async_await_with_error_handling.py  async_batch.py  async_cancellable_task.py  async_chain.py  async_cleanup.py  async_connection_pool.py  async_download.py  async_event_loop.py  async_map.py  async_parallel_download.py  async_periodic.py  async_rate_limited.py  async_retry_with_backoff.py  async_stream_processor.py  async_throttle.py  async_timeout.py  fetch_all.py  fetch_multiple_urls.py  fetch_url.py  gather_with_timeout.py  retry_async.py  run_in_parallel.py
batch_processing_functions/: __init__.py  chunked_processor.py  streaming_aggregator.py
bioinformatics_functions/: __init__.py  dna_to_rna.py  fasta_concat.py  fasta_filter.py  fasta_parser.py  fasta_rename_headers.py  fasta_to_dict.py  palindromic_sequence_finder.py  reverse_complement.py  sequence_complexity.py  sequence_conservation.py  sequence_logo.py  translate_dna_to_protein.py  validate_fasta.py  write_fasta.py
circuit_breaker_functions/: __init__.py  adaptive_timeout.py  bulkhead.py  circuit_breaker.py  fallback_chain.py
cli_functions/: __init__.py  check_command_exists.py  execute_command.py  get_cpu_info.py  get_current_user.py  get_disk_usage.py  get_environment_variable.py  get_file_size.py  get_hostname.py  get_memory_info.py  get_network_info.py  get_uptime.py  is_process_running.py  kill_process.py  list_directories.py  list_files.py  set_environment_variable.py
compression_functions/: __init__.py  decompress_number.py  polyline_decoding_list_of_ints.py  polyline_encoding_list_of_ints.py
data_types/: AVLNode.py  BinaryHeap.py  BinaryTree.py  CircularQueue.py  Deque.py  Graph.py  HashTable.py  LinkedList.py  PriorityQueue.py  Queue.py  RedBlackTree.py  SegmentTree.py  SkipList.py  SplayTree.py  Stack.py  Trie.py  UnionFind.py  __init__.py  avl_node.py  binary_heap.py  binary_tree.py  circular_queue.py  deque.py  graph.py  hash_table.py  linked_list.py  priority_queue.py  queue.py  red_black_tree.py  segment_tree.py  skip_list.py  splay_tree.py  trie.py  union_find.py
data_validation/: __init__.py
data_visualization_functions/: README.md  __init__.py  configure_axes_style.py  create_histogram.py  get_preset_theme.py  hex_to_rgb.py  save_multiple_formats.py  smooth_timeseries.py
database_functions/: __init__.py
datetime_functions/: __init__.py  calculate_age.py  compare_dates.py  convert_timezone.py  days_between.py  format_date.py  get_current_datetime_iso.py  get_current_datetime_iso_utc.py  get_date_parts.py  get_days_in_month.py  get_days_of_week.py  get_end_of_month.py  get_end_of_week.py  get_end_of_year.py  get_start_of_month.py  get_start_of_week.py  get_start_of_year.py  get_week_number.py  is_leap_year.py  is_today.py  is_weekend.py  modify_days.py  modify_months.py  modify_weeks.py  modify_years.py  parse_date.py  time_ago.py  time_until.py
decorators/: __init__.py  async_handle_error.py  async_wrapper.py  cache.py  cache_with_expiration.py  chain.py  conditional_execute.py  conditional_return.py  deprecated.py  enforce_types.py  env_config.py  event_trigger.py  format_output.py  handle_error.py  log_function_calls.py  log_signature.py  manipulate_output.py  multi_decorator.py  normalize_input.py  rate_limit.py  redirect_output.py  requires_permission.py  retry.py  serialize_output.py  throttle.py  time_and_resource_function.py  time_function.py  timeout.py  validate_args.py  validate_input.py
dev_utilities/: __init__.py
env_config_functions/: __init__.py  expand_env_vars_in_string.py  get_env_var.py  load_dotenv.py  parse_ini_config.py  parse_toml_config.py  parse_yaml_config.py
file_functions/: __init__.py  check_and_delete_file.py  cleanup.py  concat_files.py  copy_file.py  copy_folder.py  create_directory.py  file_basename.py  get_paths_dict.py  get_paths_in_directory.py  get_paths_in_directory_with_suffix.py  join_paths.py  json_to_dict.py  merge_folders.py  read_lines.py  read_tabular.py  recursive_file_search.py  tsv_to_dict.py  write_dict_to_tsv.py  write_lines.py  write_to_file.py
formatting_functions/: __init__.py  format_currency.py  format_date.py  format_duration.py  format_file_size.py  format_number_compact.py  parse_size.py
http_functions/: __init__.py  build_url.py  download_file.py  extract_domain.py  get_query_params.py  http_get.py  http_post.py  is_valid_url.py  parse_url.py  upload_file.py  validate_url.py
iterable_functions/: __init__.py  add_strings_to_subsets.py  all_match_lists.py  any_match_lists.py  check_if_all_elements_are_duplicates.py  check_if_all_sets_are_same.py  contains_sublist.py  convert_set_elements_to_strings.py  divide_list_into_n_chunks.py  find_index.py  find_sublist_index.py  flatten_list.py  get_common_elements_in_lists.py  get_duplicates.py  get_max_min_values.py  get_shared_elements.py  get_unique_sublists.py  has_element_of_type.py  identify_dict_structure.py  identify_string_in_dict_lists_regex.py  identify_value_in_dict_get_key.py  is_nested_list_empty.py  join_list.py  partially_contains_fragment_of_list.py  partially_contains_sublist.py  remove_empty_dicts_recursive.py  repeat_strings_in_a_list.py  sort_subdict_by_tuple.py  try_convert_to_type.py
json_functions/: __init__.py  json_diff.py  json_merge.py  pretty_print_json.py  safe_json_dump.py  safe_json_load.py
linux_functions/: __init__.py  get_cpu_info.py  get_disk_usage.py  get_file_size.py  get_memory_info.py  get_network_interfaces.py  get_tool_path.py  get_uptime.py  is_process_running.py  kill_process.py  list_directories.py  list_files.py  list_processes.py  ping_host.py
logger_functions/: __init__.py  contextual_logger.py  logger.py  performance_formatter.py  structured_formatter.py
logging_debugging/: __init__.py  colored_formatter.py  contextual_logger.py  json_formatter.py  (+2 more)
(+1893 files in other folders)
