[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-utils"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cramjam==2.11.0",
    "python-snappy==0.7.3",
    "zstandard==0.23.0",
    "psutil==7.0.0",
    "tqdm==4.67.1",
    "aiohttp==3.12.15",
    "pandas==2.3.1",
]

[project.optional-dependencies]
dev = [
    "allure-pytest==2.15.0",
    "allure-python-commons==2.15.0",
    "attrs==25.3.0",
    "exceptiongroup==1.3.0",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "tomli==2.2.1",
    "pylint==3.3.7",
    "mypy==1.17.1",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["pytest*"]
