[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python_utils"
version = "0.2.0"
description = "A comprehensive collection of 200+ reusable Python utility functions across 14+ specialized modules"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "MForofontov", email = "your.email@example.com" }
]
keywords = [
    "utilities",
    "utils",
    "helpers",
    "asyncio",
    "database",
    "file-handling",
    "data-validation",
    "compression",
    "datetime",
    "decorators",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "cramjam>=2.11.0",
    "python-snappy>=0.7.3",
    "zstandard>=0.23.0",
    "psutil>=7.0.0",
    "tqdm>=4.67.0",
    "numpy>=2.3.0",
    "aiohttp>=3.12.0",
    "pytz>=2024.2",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/MForofontov/python-utils"
Repository = "https://github.com/MForofontov/python-utils"
Issues = "https://github.com/MForofontov/python-utils/issues"
Documentation = "https://github.com/MForofontov/python-utils#readme"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==7.0.0",
    "allure-pytest==2.15.0",
    "allure-python-commons==2.15.0",
    "mypy==1.17.1",
    "ruff",            # <— add ruff here
    "pylint==3.3.7",   # optional; keep if you sometimes run it
    "attrs==25.3.0",
    "exceptiongroup==1.3.0",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "tomli==2.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["pytest*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["pytest/unit"]
# optional, if you use asyncio tests
# asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"  # match lowest supported Python
extend-exclude = ["venv", ".venv", "dist", "build", ".mypy_cache", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TID"]
ignore = [
  "E501",  # formatter handles long lines
]

[tool.ruff.lint.isort]
known-first-party = ["python_utils"]

[tool.ruff.format]
# Ruff is the formatter

[tool.mypy]
python_version = "3.10"               # match lowest supported
strict = true
explicit_package_bases = true
ignore_missing_imports = true         # relax until stubs are added
warn_unused_ignores = true
no_implicit_optional = true
pretty = true
cache_dir = ".mypy_cache"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/pytest/*",
    "*/pytest_run_tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/.venv_new/*",
    "*/build/*",
    "*/dist/*",
    "*/.eggs/*",
    "*.egg-info/*",
    "find_missing_tests.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
